Add project creation and project display with db description

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3147,6 +3147,7 @@ ul.common li a:hover {
 .comment-center .comment-body {
     border-bottom: 1px solid rgba(120, 130, 140, .13);
     display: table;
+    width: 100%;
     padding: 20px 25px
 }
 
