--- a/public/styles/landing-style.sass
+++ b/public/styles/landing-style.sass
@@ -75,11 +75,11 @@ header
   // Logo a cambiar
   .logo
     float: left
-    width: 60px
-    height: 60px
-    border-radius: 50%
-    border: 7px solid white
+    width: 150px
     z-index: 3
+
+  .logoimage
+  	width: 100%
 
 
   .header-right
